# sureflow-data-enrichment

./: .env.example  .gitignore  .venv  README.md  auth_settings.yaml  config.yaml  package-lock.json  pyproject.toml  pyrightconfig.json  requirements.txt  run_demo.py  test_provider.py
frontend/: fix.cjs  fix_download.cjs  package-lock.json  package.json  patch_backend.cjs  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/pages/: ControlTower.jsx  Dashboard.jsx  History.jsx  Login.jsx  ManualLab.jsx  Monitor.jsx  Results.jsx  Settings.jsx  Upload.jsx
inputs/: sample.csv
providers/: __init__.py  base.py  factory.py  mock_provider.py  real_provider.py
server/: __init__.py  config_lock.py  main.py  worker.py
src/: __init__.py  main.py
src/api/: __init__.py  surepass_client.py
src/auth/: __init__.py  service.py
src/db/: __init__.py  database.py  storage.py
src/models/: job.py
src/utils/: column_detector.py  identifiers.py  logger.py
tests/: test_server_helpers.py
utils/: __init__.py  logger.py
